# VectorGenEditor

./: .gitignore  CMakeLists.txt  README.md
artifacts/presentation/tmp_run/: build_presentation.py
assets/demo/: demo_project.json
docs/: architecture.md  demo-steps.md
src/: main.cpp
src/app/: Application.cpp  Application.h  README.md
src/command/: AddShapeCommand.cpp  AddShapeCommand.h  ChangeStyleCommand.cpp  ChangeStyleCommand.h  ChangeTextCommand.cpp  ChangeTextCommand.h  ModifyShapeCommand.cpp  ModifyShapeCommand.h  MoveShapeCommand.cpp  MoveShapeCommand.h  MoveShapesCommand.cpp  MoveShapesCommand.h  README.md  RemoveShapeCommand.cpp  RemoveShapeCommand.h  ResizeShapeCommand.cpp  ResizeShapeCommand.h  RotateShapeCommand.cpp  RotateShapeCommand.h
src/controller/: DocumentController.cpp  DocumentController.h  README.md  SelectionController.cpp  SelectionController.h
src/model/: ArrowShape.cpp  ArrowShape.h  Artboard.h  Document.cpp  Document.h  EllipseShape.cpp  EllipseShape.h  Geometry.cpp  Geometry.h  Layer.cpp  Layer.h  LineShape.cpp  LineShape.h  PolygonShape.cpp  PolygonShape.h  PolylineShape.cpp  PolylineShape.h  README.md  RectShape.cpp  RectShape.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  StarShape.cpp  StarShape.h  TextShape.cpp  TextShape.h  Workspace.cpp  Workspace.h
src/serialization/: JsonSerializer.cpp  JsonSerializer.h  README.md  SvgExporter.cpp  SvgExporter.h
src/view/: CanvasScene.cpp  CanvasScene.h  CanvasView.cpp  CanvasView.h  GenerationPanel.cpp  GenerationPanel.h  HandleItem.cpp  HandleItem.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  PropertyPanel.h  README.md  ShapeGraphicsItem.cpp  ShapeGraphicsItem.h  ToolPalette.cpp  ToolPalette.h  UiStyles.h
test/: generate_demo.cpp  test_stage10.cpp  test_stage3.cpp  test_stage4.cpp  test_stage5.cpp  test_stage7.cpp  test_stage8.cpp  test_stage9.cpp
